RESOLVED FIXED180851
RTCController should disable ICE candidate filtering in case of getUserMedia based on the RTCPerrConnection origin
https://bugs.webkit.org/show_bug.cgi?id=180851
Summary RTCController should disable ICE candidate filtering in case of getUserMedia ...
youenn fablet
Reported 2017-12-14 16:58:14 PST
RTCController should disable ICE candidate filtering in case of getUserMedia based on the RTCPerrConnection origin. Currently, every frame of a capturing page gets access to unfiltered candidates.
Attachments
Patch (14.99 KB, patch)
2018-01-11 08:49 PST, youenn fablet
no flags
Archive of layout-test-results from ews102 for mac-sierra (2.31 MB, application/zip)
2018-01-11 09:50 PST, EWS Watchlist
no flags
Patch (15.68 KB, patch)
2018-01-11 09:55 PST, youenn fablet
no flags
Archive of layout-test-results from ews102 for mac-sierra (2.25 MB, application/zip)
2018-01-11 11:13 PST, EWS Watchlist
no flags
Patch for landing (15.71 KB, patch)
2018-01-11 12:13 PST, youenn fablet
no flags
youenn fablet
Comment 1 2018-01-11 08:49:12 PST
Radar WebKit Bug Importer
Comment 2 2018-01-11 08:51:44 PST
EWS Watchlist
Comment 3 2018-01-11 09:50:02 PST
Comment on attachment 331057 [details] Patch Attachment 331057 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/6035760 New failing tests: http/wpt/webrtc/third-party-frame-ice-candidate-filtering.html
EWS Watchlist
Comment 4 2018-01-11 09:50:04 PST
Created attachment 331062 [details] Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
youenn fablet
Comment 5 2018-01-11 09:53:04 PST
(In reply to Build Bot from comment #3) > Comment on attachment 331057 [details] > Patch > > Attachment 331057 [details] did not pass mac-ews (mac): > Output: http://webkit-queues.webkit.org/results/6035760 > > New failing tests: > http/wpt/webrtc/third-party-frame-ice-candidate-filtering.html It should be skipped in WK1, gum is not supported there...
youenn fablet
Comment 6 2018-01-11 09:55:34 PST
Eric Carlson
Comment 7 2018-01-11 10:15:20 PST
Comment on attachment 331064 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=331064&action=review > Source/WebCore/Modules/mediastream/RTCController.cpp:90 > +void RTCController::disableICECandidateFiltering(Document& document) Nit: maybe disableICECandidateFilteringForDocument to match the pattern of disableICECandidateFilteringForAllOrigins.
EWS Watchlist
Comment 8 2018-01-11 11:13:21 PST
Comment on attachment 331064 [details] Patch Attachment 331064 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/6036800 New failing tests: webgl/1.0.2/conformance/uniforms/uniform-default-values.html
EWS Watchlist
Comment 9 2018-01-11 11:13:22 PST
Created attachment 331078 [details] Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
youenn fablet
Comment 10 2018-01-11 11:35:32 PST
(In reply to Build Bot from comment #8) > Comment on attachment 331064 [details] > Patch > > Attachment 331064 [details] did not pass mac-ews (mac): > Output: http://webkit-queues.webkit.org/results/6036800 > > New failing tests: > webgl/1.0.2/conformance/uniforms/uniform-default-values.html Error is unrelated.
youenn fablet
Comment 11 2018-01-11 11:36:47 PST
Thanks for the review. (In reply to Eric Carlson from comment #7) > Comment on attachment 331064 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=331064&action=review > > > Source/WebCore/Modules/mediastream/RTCController.cpp:90 > > +void RTCController::disableICECandidateFiltering(Document& document) > > Nit: maybe disableICECandidateFilteringForDocument to match the pattern of > disableICECandidateFilteringForAllOrigins. OK, will do.
youenn fablet
Comment 12 2018-01-11 12:13:45 PST
Created attachment 331090 [details] Patch for landing
WebKit Commit Bot
Comment 13 2018-01-11 13:54:28 PST
Comment on attachment 331090 [details] Patch for landing Clearing flags on attachment: 331090 Committed r226804: <https://trac.webkit.org/changeset/226804>
WebKit Commit Bot
Comment 14 2018-01-11 13:54:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.