RTCController should disable ICE candidate filtering in case of getUserMedia based on the RTCPerrConnection origin https://bugs.webkit.org/show_bug.cgi?id=180851

Patch by Youenn Fablet <youenn@apple.com> on 2018-01-11
Reviewed by Eric Carlson.

Source/WebCore:

Test: http/wpt/webrtc/third-party-frame-ice-candidate-filtering.html

RTCController now stores all the client origins (top+frame origins) of frames that got access to camera/microphone access.
For any such client origin, PeerConnection objects ICE candidate filtering is disabled.
ICE candidate filtering is reset whenever navigating/reloading the page.

* Modules/mediastream/RTCController.cpp:
(WebCore::RTCController::reset):
(WebCore::matchDocumentOrigin):
(WebCore::RTCController::shouldDisableICECandidateFiltering):
(WebCore::RTCController::add):
(WebCore::RTCController::disableICECandidateFilteringForAllOrigins):
(WebCore::RTCController::disableICECandidateFiltering):
(WebCore::RTCController::enableICECandidateFiltering):
* Modules/mediastream/RTCController.h:
* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::create):
* Modules/mediastream/UserMediaRequest.cpp:
(WebCore::UserMediaRequest::allow):
* page/Page.cpp:
(WebCore::Page::disableICECandidateFiltering):
* testing/Internals.cpp:
(WebCore::Internals::setICECandidateFiltering):

LayoutTests:

* http/wpt/webrtc/resources/third-party-frame-ice-candidate-filtering-iframe.html: Added.
* http/wpt/webrtc/third-party-frame-ice-candidate-filtering-expected.txt: Added.
* http/wpt/webrtc/third-party-frame-ice-candidate-filtering.html: Added.

Canonical link: https://commits.webkit.org/197417@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226804 268f45cc-cd09-0410-ab3c-d52691b4dbfc